[package]
name = "sandbox-e2e-live-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "eos-e2e"
path = "src/bin/eos-e2e.rs"

[dependencies]
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
clap.workspace = true
sha2.workspace = true
time.workspace = true

[lints]
workspace = true
