[package]
name = "sandbox-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "sandbox-gateway"

[[bin]]
name = "sandbox-gateway"
path = "src/gateway/main.rs"

[[bin]]
name = "sandbox-cli"
path = "src/cli/main.rs"

[dependencies]
sandbox-manager.workspace = true
sandbox-protocol.workspace = true
sandbox-runtime.workspace = true
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[lints]
workspace = true
