[package]
name = "sandbox-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sandbox-protocol.workspace = true
nix = { workspace = true, features = ["process", "signal"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
