[package]
name = "sandbox-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# preserve_order keeps RPC request args in caller order across daemon clients
# and daemon server parsing.
serde_json = { workspace = true, features = ["preserve_order"] }

[lints]
workspace = true
