[package]
name = "eos-agent-run"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
eos-engine.workspace = true
eos-llm-client.workspace = true
eos-tool.workspace = true
eos-types.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
