[package]
name = "eos-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
eos-obs-contract.workspace = true
eos-types.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true

[lints]
workspace = true
