[package]
name = "eos-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
eos-llm-client.workspace = true
eos-tools.workspace = true
eos-sandbox-api.workspace = true
eos-audit.workspace = true
eos-agent-def.workspace = true
eos-state.workspace = true
eos-types.workspace = true
futures.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
eos-skills.workspace = true
tempfile.workspace = true

[lints]
workspace = true
