[package]
name = "eos-plugin-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# eos-types carries `JsonObject` and the LSP input structs named directly in this
# crate's public surface. It cannot be reached transitively in a nameable way, so
# it is a direct edge per impl-eos-plugin-catalog.md §2.
eos-types.workspace = true
eos-sandbox-api.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true

[lints]
workspace = true
