[package]
name = "eos-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
eos-db.workspace = true
eos-engine.workspace = true
eos-agent-run.workspace = true
eos-workflow.workspace = true
eos-agent-message-records.workspace = true
eos-plugin-catalog.workspace = true
eos-skills.workspace = true
eos-config.workspace = true
eos-agent-def.workspace = true
eos-sandbox-port.workspace = true
eos-state.workspace = true
eos-types.workspace = true
eos-llm-client.workspace = true
eos-tools.workspace = true
eos-audit.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
console-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
futures.workspace = true
# Layer-A scripted-LLM/EventSource doubles + fake transport (TESTING_SPEC §11).
# `build_test_state`/`FakeProvisioner` stay crate-local (tests/unit/support.rs):
# they are `eos-runtime` types, so the dev-dep two-instance rule bars consuming
# them from this crate's in-crate tests (§14.2).
eos-testkit = { workspace = true }

[features]
tokio-console = ["dep:console-subscriber"]

[lints]
workspace = true
