[package]
name = "eos-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# eos-config owns the shared `---` YAML frontmatter split (parse_markdown_frontmatter),
# the only use of this edge — the skill root itself is passed in by eos-runtime.
eos-config.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
