[package]
name = "eos-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/mod.rs"

[dependencies]
# Direct eos-types edge: this crate names InvocationId, ToolUseId,
# WorkflowSessionId, CommandSessionId, SubagentSessionId, and JsonObject/CoreError
# in its own signatures, and none of the other upstream deps re-export them
# (eos-state re-exports only a subset). Mirrors the eos-plugin-catalog
# precedent.
eos-types.workspace = true
eos-state.workspace = true
eos-tool-core.workspace = true
eos-agent-def.workspace = true
eos-agent-message-records.workspace = true
eos-agent-run.workspace = true
eos-sandbox-port.workspace = true
eos-skills.workspace = true
eos-llm-client.workspace = true
# Direct eos-config edge: `registry/config.rs` names
# `eos_config::parse_markdown_frontmatter` to split the
# `.eos-agents/tools/*.md` frontmatter (the shared config-format contract owned
# upstream, as eos-skills already does). serde_yaml is named to read the parsed
# frontmatter mapping (intent / terminal / hooks fields).
eos-config.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
thiserror.workspace = true
async-trait.workspace = true
regex.workspace = true

[dev-dependencies]
tokio = { workspace = true }
insta.workspace = true

[lints]
workspace = true
