[package]
name = "eos-backend-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
futures.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true

eos-types.workspace = true
eos-state.workspace = true
eos-backend-types.workspace = true
eos-backend-store.workspace = true
eos-backend-runtime.workspace = true
eos-backend-obs.workspace = true

[dev-dependencies]
tower.workspace = true
tempfile.workspace = true
