[package]
name = "eos-backend-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true

eos-types.workspace = true
eos-agent-core-server.workspace = true
eos-agent-run.workspace = true
eos-engine.workspace = true
eos-backend-types.workspace = true
eos-backend-store.workspace = true
eos-backend-runtime.workspace = true
eos-backend-audit.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
tempfile.workspace = true
eos-sandbox-port.workspace = true
