[package]
name = "eos-backend-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Sandbox port contracts the manager implements / hands back (the injected
# gateway, the daemon transport, and the request provisioner binding).
eos-sandbox-port.workspace = true
# Concrete Docker/daemon host the production manager composes: one registry ->
# daemon client (transport) -> lifecycle -> request provisioner.
eos-sandbox-host.workspace = true
# Backend-owned DTOs (sanitized SandboxView / SandboxState, RunMeta, EventRecord)
# and lifecycle config.
eos-backend-types.workspace = true
eos-backend-config.workspace = true
# backend.db persistence: event_log repositories the event bus streams through
# (never a raw pool).
eos-backend-store.workspace = true
# Engine stream event callback contract used by the backend event bus.
eos-engine.workspace = true
# Typed ids and timestamps used by the refcount state, bindings, and run lifecycle.
eos-types.workspace = true

async-trait.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
# tokio drives the event-bus channels (mpsc/broadcast).
tokio.workspace = true
# the event-bus callback classifies StreamEvents and builds owned EventRecord
# payloads (serde_json::to_value).
serde_json.workspace = true

[dev-dependencies]
# temp backend.db files for event-bus persistence tests.
tempfile.workspace = true

[package.metadata.cargo-machete]
ignored = ["tempfile"]

[lints]
workspace = true
