[package]
name = "eos-backend-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sqlx = { workspace = true, features = ["time"] }
time.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Typed ids/timestamps and the backend DTOs the repositories persist.
eos-types.workspace = true
eos-protocol.workspace = true
eos-backend-types.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile.workspace = true

[lints]
workspace = true
