[package]
name = "daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
command.workspace = true
namespace.workspace = true
config.workspace = true
layerstack.workspace = true
operation.workspace = true
plugin.workspace = true
protocol.workspace = true
trace.workspace = true
workspace.workspace = true
base64.workspace = true
# preserve_order is contract-load-bearing: request `args` keys must cross
# the wire in insertion order for byte-stable wire-message round-trips.
serde_json = { workspace = true, features = ["preserve_order"] }
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Property tests for the absorbed wire response round-trip.
proptest.workspace = true

[lints]
workspace = true
